conf/envoy-bootstrap.yaml
dynamic_resources:
  ads_config:
    api_type: GRPC
    grpc_services:
      - envoy_grpc:
          cluster_name: xds_cluster
  cds_config:
    ads: {}
  lds_config:
    ads: {}
node:
  cluster: kourier-knative
  id: 3scale-kourier-gateway
static_resources:
  listeners:
    - name: stats_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: stats_server
              route_config:
                virtual_hosts:
                  - name: admin_interface
                    domains:
                      - "*"
                    routes:
                      - match:
                          safe_regex:
                            google_re2: {}
                            regex: '/(certs|stats(/prometheus)?|server_info|clusters|listeners|ready)?'
                          headers:
                            - name: ':method'
                              exact_match: GET
                        route:
                          cluster: service_stats
              http_filters:
                - name: envoy.router
                  config: {}
  clusters:
    - name: service_stats
      connect_timeout: 0.250s
      type: static
      load_assignment:
        cluster_name: service_stats
        endpoints:
          lb_endpoints:
            endpoint:
              address:
                pipe:
                  path: /tmp/envoy.admin
    - name: xds_cluster
      connect_timeout: 1s
      hosts:
        - socket_address:
            address: "kourier-control.knative-serving"
            port_value: 18000
      http2_protocol_options: {}
      type: STRICT_DNS
admin:
  access_log_path: "/dev/stdout"
  address:
    pipe:
      path: /tmp/envoy.admin
